# gpt-fast

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: convert_hf_checkpoint.py  download.py  prepare.sh  quantize.py
src/: GPTQ.py  eval.py  generate.py  model.py  quantize.py  run.py  tp.py  utils.py
